--- a/index.css
+++ b/index.css
@@ -143,7 +143,7 @@ select{
   letter-spacing: 0.5px;
   font-weight: 600;
   padding: 1em;
-  transition: 0.3s;
+  transition: 0.5s;
   cursor: pointer;
 }
 
@@ -159,8 +159,18 @@ select{
 }
 
 
-@media (max-width:500px){
+@media (max-width:850px){
   .bar-scheme{
     transform: translate(0, 3em);
   }
+
+  #scheme-btn:hover{
+  background: rgba(204, 213, 227, 0.1);
+  color: #D5D4D8;
+  }
+
+  select{
+    font-size: 0.5rem;
+  }
+
 }
